--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /node_modules
-/src/config/firebase-service-account.json
-/src/config/firebase.js
+src/config/firebase-service-account.json
+src/config/firebase.js
