--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-DB_USER=postgres
-DB_HOST=localhost
+DB_USER=daniela
+DB_HOST=192.168.1.54
 DB_DATABASE=cartera_convam
-DB_PASSWORD=con74m
+DB_PASSWORD=conv4m1
 DB_PORT=5432
 PORT=3000
 
 #usuario de BD: postgres
 #contraseña de postgres: con74m
+#conv4m1
