El sistema puede registrar y loguear usuarios con firebase y postgres

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_USER=daniela
-DB_HOST=192.168.1.54
+DB_USER=postgres
+DB_HOST=localhost
 DB_DATABASE=cartera_convam
-DB_PASSWORD=conv4m1
+DB_PASSWORD=con74m
 DB_PORT=5432
 PORT=3000
 
