--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_USER=daniela
-DB_HOST=192.168.1.111
+DB_USER=postgres
+DB_HOST=localhost
 DB_DATABASE=cartera_convam
-DB_PASSWORD=conv4m1
+DB_PASSWORD=admin
 DB_PORT=5432
 PORT=3000
 
