Controlador de rol y cambio de puerto en env.

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-DB_USER=daniela
-DB_HOST=192.168.1.111
+DB_USER=postgres
+DB_HOST=localhost
 DB_DATABASE=cartera_convam
-DB_PASSWORD=conv4m1
-DB_PORT=5432
+DB_PASSWORD=con74m
+DB_PORT=5433
 PORT=3000
 
 #usuario de BD: postgres
 #contraseña de postgres: con74m
 #conv4m1
+
