Se modifico el codigo del controlador de cliente.

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_USER=postgres
 DB_HOST=localhost
 DB_DATABASE=cartera_convam
-DB_PASSWORD=admin
-DB_PORT=5432
+DB_PASSWORD=con74m
+DB_PORT=5433
 PORT=3000
 
 #usuario de BD: postgres
