--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-validator": "^7.3.0",
     "firebase-admin": "^13.5.0",
     "mysql2": "^3.15.3",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
+    "puppeteer": "^24.31.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
