--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
     "firebase-admin": "^13.5.0",
+    "iconv-lite": "^0.6.3",
     "js": "^0.1.0",
     "mysql2": "^3.15.3",
     "numero-a-letras": "^1.0.6",
