cambios para despliegue

--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_DATABASE=cartera_convam
-DB_PASSWORD=con74m
-DB_PORT=5433
+# Puerto del servidor
 PORT=3000
 
-#usuario de BD: postgres
-#contraseña de postgres: con74m
-#conv4m1
+# Entorno
+NODE_ENV=development
+
+# PostgreSQL local
+DATABASE_URL=postgresql://postgres:admin@localhost:5432/db_cartera_convam
