--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npx puppeteer browsers install chrome",
+    "postinstall": "puppeteer browsers install chrome",
+    "build": "npm install && puppeteer browsers install chrome",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
