--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=3000
 NODE_ENV=development
 
 # PostgreSQL local
-DATABASE_URL=postgresql://postgres:admin@localhost:5432/cartera_convam
+DATABASE_URL=postgresql://postgres:admin@localhost:5432/cartera-convam
 
 
 FIREBASE_PROJECT_ID=convam-cartera
